tests/expectations/compiler/interfaces/record_field_missing_fail.out
Error [ECHI03712012]: Record `Token` in program `test` is missing required field `amount` specified by interface `test.aleo/TokenInterface`.
    --> compiler-test:10:5
     |
  10 |     record Token {
     |     ^^^^^^^^^^^^^^
  11 |         owner: address,
     |         ^^^^^^^^^^^^^^^
  12 |     }
     |     ^
     |
     = Add the missing field with the exact type and mode specified in the interface.
